--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "tsc --module Node --out bin src/tsi.ts"
 
   },
+  "bin": {
+    "tsi": "./bin/tsi"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/qiemem/tsi"
