--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "A typescript REPL (command line interpreter)",
   "main": "tsi.js",
   "dependencies": {
-    "typescript.api": "~0.6.1",
+    "typescript.api": "~0.7.0",
     "optimist": "~0.6.0"
-  },
-  "devDependencies": {
-    "typescript": "0.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --module Node --out bin src/tsi.ts"
+    "build": "tsc --module commonjs --outDir bin src/tsi.ts"
   },
   "bin": {
     "tsi": "./bin/tsi"
